--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,8 +1,12 @@
 html
   head
     title Redux
-    link(href='static/style.css', rel='stylesheet')
+    link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u',
+    rel='stylesheet', crossorigin='anonymous')
+    link(href='/static/style.css', rel='stylesheet')
   body
     #app!= reactString
     script window.INITIAL_STATE = !{JSON.stringify(finalState)};
-    script(src='static/bundle.js')
+    script(src='https://code.jquery.com/jquery-3.1.0.min.js')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js', integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', crossorigin='anonymous')
+    script(src='/static/bundle.js')
