Mostly bug fixes and some UI

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -7,7 +7,8 @@ html
     link(href='/static/style.css', rel='stylesheet')
     link(href='https://npmcdn.com/react-select/dist/react-select.css', rel='stylesheet')
   body
-    #app!= reactString
+    #app
+      div!= (reactString)
     script window.INITIAL_STATE = !{JSON.stringify(finalState)};
     script(src='https://code.jquery.com/jquery-3.1.0.min.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js', integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', crossorigin='anonymous')
